--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.4.10",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "socket.io-client": "^2.2.0",
+    "vue": "^2.6.10",
+    "vue-socket.io": "^3.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
