--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/marianoheller/rageboard/issues"
   },
-  "homepage": "https://github.com/marianoheller/rageboard#readme"
+  "homepage": "https://github.com/marianoheller/rageboard#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "swagger-ui-express": "^4.0.5"
+  }
 }
