--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --exit"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,9 +13,12 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "husky": "^2.3.0",
+    "mocha": "^6.1.4",
     "prettier": "1.17.1",
-    "pretty-quick": "^1.11.0"
+    "pretty-quick": "^1.11.0",
+    "supertest": "^4.0.2"
   },
   "husky": {
     "hooks": {
