--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,14 @@
     "core-js": "^2.6.5",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
-    "vue-socket.io": "^3.0.7"
-  },
-  "devDependencies": {
+    "vue-socket.io": "^3.0.7",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
+    "vue-template-compiler": "^2.6.10",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "eslint-plugin-vue": "^5.0.0"
   },
   "eslintConfig": {
     "root": true,
