--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "d3-scale": "^3.0.0",
     "date-fns": "^1.30.1",
