--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-socket.io": "^3.0.7",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1"
   },
   "eslintConfig": {
     "root": true,
