--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "register-service-worker": "^1.6.2",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
+    "vue-color": "^2.7.0",
     "vue-socket.io": "^3.0.7",
+    "vue-styled-components": "^1.4.5",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1"
   },
